<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple AR for Android</string>
    <string name="action_calibrate">Calibrate</string>
    <string name="calibration">Calibration</string>
    <string name="undistortion">Undistortion</string>
    <string name="comparison">Comparison</string>
    <string name="preview_mode">Preview mode</string>
    <string name="calibration_successful">Successfully calibrated!\nAvg. re-projection error:</string>
    <string name="calibration_unsuccessful">Unsuccessful calibration.\nTry again</string>
    <string name="more_samples">Please, capture more samples</string>
    <string name="calibrating">Calibrating...</string>
    <string name="please_wait">Please, wait</string>
    <string name="original">Original</string>
    <string name="undistorted">Undistorted</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_switch">Enable X</string>
    <string name="pref_description_switch">Do something
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_rows">Pattern Rows</string>
    <string name="pref_title_columns">Pattern Columns</string>
    <string name="pref_title_sync_frequency">Type of Pattern</string>
    <string-array name="pref_sync_frequency_titles">
        <item>Circle Grid Asym</item>
        <item>Circle Grid sym</item>
        <item>Chessboard</item>
        <item>CornerDetector</item>
        <item>BlackBlob</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <!-- Figure To Display -->
    <string-array name="D3dwireframe_titles">
        <item>Triangle</item>
        <item>OpenBlock</item>
        <item>ClosedBlock</item>
        <item>Spheroid</item>
        <item>Nothing</item>
    </string-array>
    <string-array name="D3dwireframe_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings">Config</string>
    <string name="title_activity_config">Config</string>
    <string name="title_activity_test_data">TestData</string>
    <string name="testdata">TestDataSelection</string>

</resources>
