<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="pat_rows"
        android:defaultValue="4"
        android:title="@string/pref_title_rows"
        android:summary="The number of rows in the pattern"
        android:numeric="integer"
        android:maxLength="2"
        />
    <EditTextPreference
        android:key="pat_cols"
        android:defaultValue="11"
        android:title="@string/pref_title_columns"
        android:summary="The number of columns in the pattern"
        android:numeric="integer"
        android:maxLength="2"
        />
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency" />

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines.
    <Preference android:title="@string/pref_title_system_sync_settings">
    <intent android:action="android.settings.SYNC_SETTINGS" />
    </Preference> -->

</PreferenceScreen>
