<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->


    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_message_notifications" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <EditTextPreference
        android:key="dWork"
        android:defaultValue="0"
        android:title="Camera Calibration"
        android:summary="Preform Camera Calibration"
        android:numeric="integer"
        android:maxLength="1"
        />

    <EditTextPreference
        android:key="eWork"
        android:defaultValue="0"
        android:title="Do3D rending"
        android:summary="Preform Camera Calibration"
        android:numeric="integer"
        android:maxLength="1"
        />
    <EditTextPreference
        android:key="Timg"
        android:defaultValue="1"
        android:title="@string/pref_title_rows"
        android:summary="The test images (1-15)"
        android:numeric="integer"
        android:maxLength="15"
        />

</PreferenceScreen>
